## Process this file with automake to produce Makefile.in -*-Makefile-*-
AUTOMAKE_OPTIONS = foreign 1.2h
                                                                                
EXTRA_DIST = Gnuplot.app-defaults

SUBDIRS = LaTeX

xresourcedir = $(libdir)/X11/app-defaults
xresource_DATA = Gnuplot

Gnuplot:
	cp Gnuplot.app-defaults Gnuplot
