## Process this file with automake to produce Makefile.in -*-Makefile-*-
AUTOMAKE_OPTIONS = foreign 1.2h

# here are listed all the qtterminal files that go to the distribution
EXTRA_DIST = qt_term.h qt_conversion.cpp QtGnuplotWindow.h \
QtGnuplotApplication.h QtGnuplotWidget.h QtGnuplotScene.h QtGnuplotEvent.h \
QtGnuplotInstance.h QtGnuplotItems.h QtGnuplotSettings.ui
